still trying to fix responsive issues, changed logo issue, worked on media queries

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div> -->
 
 			<div id="logoBar">
-				<img src="../DG_LogoBarOpt2.png">
+				<img src="images/DG_LogoBarOpt2.png">
 			</div>
 		</section>
 
@@ -56,7 +56,9 @@
 		
 <!-- Footer Section -->
 		<section>
-			<footer>Designed and coded by: Desirée Girotto</footer>
+			<div id="footer">
+				<footer>Designed and coded by: Desirée Girotto</footer>
+			</div>
 		</section>
 	</body>
 
