updated files to get responsivenss to work better, removed duplicates in media queries, fixed the footer so it sits at the bottom, changed some margin and padding setting to percentages instead of pixels so it works better with responsive features

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			<div class="yellowbar">
 			</div> -->
 
-			<div id="logoBar">
+			<!-- <div id="logoBar"> 
 				<img src="images/DG_LogoBarOpt2.png">
-			</div>
+			</div> -->
 		</section>
 
 
